# rWithPython

./: .Rbuildignore  .gitignore  DESCRIPTION  cleanup  configure  configure.ac  configure.win
R/: python.exec.R  python.get.R  zzz.R
man/: python.load.Rd
src/: pycall.c
tests/: testCheckVersion.R
